# phd-ai-agentz

./: .gitignore  README.md  env.example  pyproject.toml
agent_langgraph/: README.md  agent.py  main.py  models.py  prompts.py
agent_langgraph_mcp/: README.md  agent.py  main.py  models.py  prompts.py  server.py
agent_langgraph_swarm/: README.md  agent.py  main.py  models.py  prompts.py
agent_mcp_swarm/: README.md  agent_server.py  main.py  models.py  network_tools_server.py  security_tools_server.py
common/: config.py  exceptions.py  langchain_tools.py  langfuse.py  prompts.py  tools.py
