[project]
name = "phd-ai-agentz"
version = "0.1.0"
description = "Cyber security agent examples for PHD"
authors = [{ name = "Антон Белоусов", email = "anton@cyberintel.ru" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "requests>=2.32.3,<3",
    "python-dotenv>=1.1.0,<2",
    "langgraph>=0.4.5,<0.5",
    "shodan>=1.31.0,<2",
    "typer>=0.15.4,<0.16",
    "rich>=14.0.0,<15",
    "langgraph-swarm>=0.0.11,<0.0.12",
    "langchain>=0.3.25,<0.4",
    "langchain-openai>=0.3.17,<0.4",
    "langchain-mcp-adapters>=0.1.7,<0.2",
    "mcp>=1.9.4",
    "temporalio>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "black>=24.1.1,<25",
    "isort>=5.13.2,<6",
    "mypy>=1.8.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3 


[tool.hatch.build.targets.wheel]
packages = ["agent_langgraph", "agent_langgraph_mcp", "agent_langgraph_swarm", "agent_mcp"]
include = [
    "common/*",
]
